# Rust-By-Practice

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/practice/alias/: code1.rs  code2.rs
src/practice/command/: code1.rs
src/practice/config files/: code1.rs
src/practice/debug & display/: code1.rs  code2.rs  code3.rs
src/practice/dynamic dispatch/: README.md  code1.rs  code2(debugger_mode).rs
src/practice/elision/: code1.rs
src/practice/exitcode/: code1.rs
src/practice/from & into/: code1.rs  code2.rs  code3.rs  code4.rs
src/practice/generics/: code1.rs  code2.rs  code3.rs
src/practice/lifetime/: code1.rs  code2.rs  code4.rs
src/practice/module/: code1.rs  code2(back_of_house).rs  code2(lib).rs  code2(main).rs
src/practice/module/code2(front_of_house)/: hosting.rs  serving.rs
src/practice/result/: code1.rs  code2.rs  code3.rs
src/practice/signals/: code1.rs  code2.rs  code3.rs  code4.rs  code5.rs
src/practice/string/: code1.rs  code2.rs  code3.rs  code4.rs  code5.rs  code6.rs
src/practice/traits/: code2.rs  code3.rs  code4.rs  code5.rs  code6.rs  code7.rs  code9.rs
src/practice/traits object/: code1.rs  code2.rs  code3.rs  code4.rs  code5(approach1).rs  code5(approach2).rs
src/practice/vector/: code1.rs  code2.rs  code3.rs  code4.rs
